--- a/server.properties
+++ b/server.properties
@@ -1,5 +1,5 @@
 #Minecraft server properties
-#Sun Nov 16 21:13:35 UTC 2025
+#Mon Dec 29 22:14:10 UTC 2025
 accepts-transfers=false
 allow-flight=false
 allow-nether=true
@@ -41,7 +41,7 @@ max-chained-neighbor-updates=1000000
 max-players=20
 max-tick-time=60000
 max-world-size=29999984
-motd=Coreflux MQTT Streamer Server
+motd=FluxCraft MQTT Streaming
 network-compression-threshold=256
 online-mode=false
 op-permission-level=4
