--- a/.github/workflows/maven-publish.yml
+++ b/.github/workflows/maven-publish.yml
@@ -1,22 +1,33 @@
 # This workflow will build a package using Maven and then publish it to GitHub packages when a release is created
-# For more information see: https://github.com/actions/setup-java/blob/main/docs/advanced-usage.md#apache-maven-with-a-settings-path
+# Also supports manual runs against an existing tag via workflow_dispatch
 
 name: Maven Package
 
 on:
   release:
     types: [created]
+  workflow_dispatch:
+    inputs:
+      tag:
+        description: 'Tag to build (e.g. v1.2.3). If empty when manually run, the workflow will use the default branch.'
+        required: false
+        default: ''
 
 jobs:
   build:
-
     runs-on: ubuntu-latest
     permissions:
       contents: read
       packages: write
 
     steps:
-    - uses: actions/checkout@v4
+    - name: Checkout code
+      uses: actions/checkout@v4
+      with:
+        # If triggered by a release use the release tag, otherwise use the manual input tag (if provided).
+        # Fallback to the workflow ref (usually default branch) if neither is present.
+        ref: ${{ github.event_name == 'release' && github.event.release.tag_name || github.event.inputs.tag || github.ref }}
+
     - name: Set up JDK 11
       uses: actions/setup-java@v4
       with:
