--- a/.github/workflows/maven-publish.yml
+++ b/.github/workflows/maven-publish.yml
@@ -1,6 +1,3 @@
-# This workflow will build a package using Maven and then publish it to GitHub packages when a release is created
-# Also supports manual runs against an existing tag via workflow_dispatch
-
 name: Maven Package
 
 on:
@@ -9,7 +6,6 @@ on:
   workflow_dispatch:
     inputs:
       tag:
-        description: 'Tag to build (e.g. v1.2.3). If empty when manually run, the workflow will use the default branch.'
         required: false
         default: ''
 
@@ -17,15 +13,13 @@ jobs:
   build:
     runs-on: ubuntu-latest
     permissions:
-      contents: read
+      contents: write
       packages: write
 
     steps:
     - name: Checkout code
       uses: actions/checkout@v4
       with:
-        # If triggered by a release use the release tag, otherwise use the manual input tag (if provided).
-        # Fallback to the workflow ref (usually default branch) if neither is present.
         ref: ${{ github.event_name == 'release' && github.event.release.tag_name || github.event.inputs.tag || github.ref }}
 
     - name: Set up JDK 21
@@ -33,13 +27,26 @@ jobs:
       with:
         java-version: '21'
         distribution: 'temurin'
-        server-id: github # Value of the distributionManagement/repository/id field of the pom.xml
-        settings-path: ${{ github.workspace }} # location for the settings.xml file
 
     - name: Build with Maven
       run: mvn -B package --file pom.xml
 
-    - name: Publish to GitHub Packages Apache Maven
-      run: mvn deploy -s $GITHUB_WORKSPACE/settings.xml
+    - name: Locate JAR
+      id: findjar
+      run: |
+        jar=$(ls target/*.jar 2>/dev/null | grep -v 'original' | head -n1 || true)
+        if [ -z "$jar" ]; then
+          echo "No JAR found in target/"; exit 1
+        fi
+        echo "path=$jar" >> $GITHUB_OUTPUT
+        echo "name=$(basename "$jar")" >> $GITHUB_OUTPUT
+
+    - name: Upload JAR to Release
+      uses: actions/upload-release-asset@v1
+      with:
+        upload_url: ${{ github.event.release.upload_url }}
+        asset_path: ${{ steps.findjar.outputs.path }}
+        asset_name: ${{ steps.findjar.outputs.name }}
+        asset_content_type: application/java-archive
       env:
-        GITHUB_TOKEN: ${{ github.token }}
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
