--- a/.github/workflows/maven-publish.yml
+++ b/.github/workflows/maven-publish.yml
@@ -42,6 +42,7 @@ jobs:
         echo "name=$(basename "$jar")" >> $GITHUB_OUTPUT
 
     - name: Upload JAR to Release
+      if: ${{ github.event_name == 'release' }}
       uses: actions/upload-release-asset@v1
       with:
         upload_url: ${{ github.event.release.upload_url }}
@@ -50,3 +51,10 @@ jobs:
         asset_content_type: application/java-archive
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
+    - name: Upload build artifact (workflow artifact)
+      if: ${{ github.event_name != 'release' }}
+      uses: actions/upload-artifact@v4
+      with:
+        name: fluxcraft-jar
+        path: ${{ steps.findjar.outputs.path }}
