--- a/pom.xml
+++ b/pom.xml
@@ -9,6 +9,14 @@
     <version>1.0.0</version>
     <packaging>jar</packaging>
 
+    <distributionManagement>
+        <repository>
+            <id>github</id>
+            <name>GitHub Packages</name>
+            <url>https://maven.pkg.github.com/jforge/FluxCraft</url>
+        </repository>
+    </distributionManagement>
+
     <name>Minecraft FluxCraft</name>
     <description>Streams Minecraft events to MQTT broker</description>
 
