Added MQTT TLS connectivity
* Prepare release 1.1.0, added TLS support, mqtt clientIds globally unique, common mqtt client factory
* Update README with warning on certificate validation
* Added a warning about disabling certificate validation.

--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -6,6 +6,8 @@ mqtt:
     username: "root"
     password: "coreflux"
     client-id: "fluxcraft"
+    tls:
+      disableCertificateValidation: false
     keep-alive: 60
     connection-timeout: 30
     automatic-reconnect: true
